installed fonts, icons, fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,400,500&display=swap');
+
 .App {
   text-align: center;
 }
@@ -69,13 +71,13 @@ body {
   h1 {
   font-family: 'Montserrat', Sans-serif;
   font-size: 35px;
-  font-weight: 400;
+  font-weight: 500;
   }
 
   h2 {
   font-family: 'Montserrat', Sans-serif;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.7;
   color: #7A7A7A;  
   }
@@ -206,12 +208,12 @@ body {
   nav.navbar {
   position: relative;
   left: 0px;
+  top: -7px;
   display: inline-block;
   background-color: #ffffff;
   width: 25%;
   height: 95px;
   overflow: hidden;
-  
   text-align: center;
   }
 
@@ -242,6 +244,7 @@ body {
   position: relative;
   width: 38%;
   height: 95px;
+  top: -54px;
   }
 
   /* Global DIV Styles */
@@ -281,9 +284,8 @@ body {
   }
 
   div.halfsection {
-  display: inline-block;
   width: 50%;
-  
+  float: left;
   }
 
   div.thirdsection {
@@ -293,9 +295,8 @@ body {
   }
 
   div.quartersection {
-  display: inline-block;
   width: 25%;
-  
+  float: left;
   }
 
   
